backend-deploy-default.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzabackend  
  labels:
    app: web
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pizzabackend
    spec:
      containers:
      - name: pizzabackend
        image: robcamer/pizzabackend:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: pizzabackend
---
apiVersion: v1
kind: Service
metadata:
  name: pizzabackend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: pizzabackend
