frontend-deploy-default.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzafrontend
  labels:
    app: web
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pizzafrontend
    spec:
      containers:
      - name: pizzafrontend
        image: robcamer/pizzafrontend:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: pizzafrontend
---
apiVersion: v1
kind: Service
metadata:
  name: pizzafrontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: pizzafrontend
