frontend-configure-ingress-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-pizza-front-end
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pizzafrontend
            port:
              number: 80
